# unicaps

./: .readthedocs.yml  .travis.yml  README.md  requirements-dev.txt  setup.cfg  tox.ini
docs/: requirements.txt
docs/source/: conf.py  index.rst
tests/: conftest.py  test_captcha_base.py  test_image_captcha.py  test_service_module.py
tests/data/: data.py
unicaps/: __init__.py  __version__.py  _solver.py  captcha.py  common.py
unicaps/_captcha/: base.py  capy.py
unicaps/_service/: __init__.py  anti_captcha.py  azcaptcha.py  base.py  cptch_net.py  deathbycaptcha.py  twocaptcha.py
unicaps/_transport/: __init__.py  http_transport.py  socket_transport.py
