[metadata]
name = unicaps
author = Sergey Totmyanin
author-email = STotmyanin@gmail.com
summary = Universal CAPTCHA Solver for humans
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/sergey-scat/unicaps
project_urls =
    Bug Tracker = https://github.com/sergey-scat/unicaps/issues
    Documentation = https://unicaps.readthedocs.io/en/latest/
    Source Code = https://github.com/sergey-scat/unicaps
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
requires-python = >=3.6
keywords =
    captcha
    captcha-solver
    anti-captcha
    2captcha
    captcha-killer

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 100

[tool.pylint]
max-line-length = 100
max-args = 8
max-attributes = 12

[tool.pylint.messages_control]
disable = R0801,R0903

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=100

[flake8]
max-line-length=100
ignore=F401